fixing white space 2.0

--- a/AboutStyleSheet.css
+++ b/AboutStyleSheet.css
@@ -1,10 +1,4 @@
-﻿html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
+﻿body {
     background-color: #191b1f /*#0e171f #21262e*/;
     font-family: Arial;
 }
