--- a/HomeStyleSheet.css
+++ b/HomeStyleSheet.css
@@ -1,10 +1,4 @@
-﻿html {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
+﻿body {
     min-height: 100%;
     background-color: #191b1f /*#0e171f #21262e*/;
     font-family: Arial;
